Working on components

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href='https://use.typekit.net/jff8xhs.css'>
+    <link rel="stylesheet" href='./index.css'>
     <title>CookNook - React</title>
   </head>
   <body>
